# Agent-Player

./: .devdbrc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  API_DUPLICATION_ANALYSIS.md  API_GUIDE.md  AppInstaller.tsx  CHANGELOG.md  COMPREHENSIVE_TESTING_COMPLETED.md  CONTRIBUTING.md  CRITICAL_ISSUES_AND_TASKS.md  CustomFieldBuilderApp.tsx  CustomFieldsPage.tsx  DUPLICATION_REMOVAL_COMPLETED.md  DUPLICATION_REMOVAL_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  EXTENSIONS_REGISTRY.md  FORMBUILDER_REQUIREMENTS.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  ISSUES_REPORT.md  LATEST_DEVELOPMENT_UPDATE.md  LAUNCHER_GUIDE.md  LICENSE  LOCAL_AI_ENDPOINT_SUGGESTIONS_COMPLETION_REPORT.md  Makefile  PRIVACY.md  PROJECT_ISSUES_SUMMARY.md  PROJECT_STATUS.md  README.md  README_DATABASE_SCHEMA.md  RELEASE_GUIDE.md  RELEASE_GUIDE_AR.md  RUST_LAUNCHER_GUIDE.md  SECURITY.md  TEST_GUIDE.md  THIRD_PARTY_LICENSES.md  agent.bat  (+23 more)
installer/: .gitignore  Cargo.toml  README-STUB-INSTALLER.md  build-log.txt  build.rs  simple-install.ps1  tauri.conf.json
installer/icons/: README.txt
installer/resources/templates/: agent-player-backend.xml.template  agent-player-frontend.plist.template  agent-player-frontend.service.template  agent-player-frontend.xml.template  agent-player.plist.template  agent-player.service.template
installer/src/: main.rs
installer/src/deployment/: direct.rs  docker.rs  mod.rs  server.rs
installer/src/services/: logs.rs  mod.rs  system_tray.rs  uninstaller.rs  updater.rs
installer/src/setup/: autostart.rs  bundler.rs  database.rs  (+3 more)
(+485 files in other folders)
