[package]
name = "agent-player-installer"
version = "0.1.0"
edition = "2021"
authors = ["Agent Player Team"]
description = "Professional installer for Agent Player"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
ssh2 = "0.9"
sysinfo = "0.33"
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
